// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /api/register email missing user creation: email missing 1`] = `
Object {
  "description": Object {
    "email": "Email has to be of type string",
  },
  "error": "VALIDATION/TYPE_ERROR",
}
`;

exports[`POST /api/register malformed email user creation: email invalid 1`] = `
Object {
  "description": Object {
    "email": "Email is invalid",
  },
  "error": "VALIDATION/VALIDATION_ERROR",
}
`;

exports[`POST /api/register valid user creation: valid user 1`] = `"{\\"username\\":\\"validuser\\",\\"email\\":\\"valid@user.com\\"}"`;
